tests/error/comptime_arg_errors/function_type.err
Error: Invalid annotation (at $FILE:6:22)
  | 
4 | 
5 | @guppy
6 | def main(f: Function[[nat @ comptime], None]) -> None:
  |                       ^^^^^^^^^^^^^^ Comptime annotations are only allowed for named top-level
  |                                      function arguments

Guppy compilation failed due to 1 previous error
